--- a/index.html
+++ b/index.html
@@ -499,6 +499,40 @@
 <body>
     <div class="container">
         <h1 class="family-header">🎄 СЕМЕЙНЫЙ ВИШЛИСТ 2024 🎁</h1>
+
+        <!-- Анимированные иконки семьи -->
+<div class="family-icons-container">
+    <div class="family-icons">
+        <div class="family-icon" title="Папа">
+            <div class="icon-emoji">👨</div>
+            <div class="icon-name">ПАПА</div>
+        </div>
+        <div class="family-icon" title="Мама">
+            <div class="icon-emoji">👩</div>
+            <div class="icon-name">МАМА</div>
+        </div>
+        <div class="family-icon" title="Брат">
+            <div class="icon-emoji">👦</div>
+            <div class="icon-name">БРАТ</div>
+        </div>
+        <div class="family-icon" title="Сестра">
+            <div class="icon-emoji">👧</div>
+            <div class="icon-name">СЕСТРА</div>
+        </div>
+        <div class="family-icon" title="Жена брата">
+            <div class="icon-emoji">👩‍❤️‍👨</div>
+            <div class="icon-name">НЕВЕСТКА</div>
+        </div>
+        <div class="family-icon" title="Дедушка">
+            <div class="icon-emoji">👴</div>
+            <div class="icon-name">ДЕД</div>
+        </div>
+        <div class="family-icon" title="Бабушка">
+            <div class="icon-emoji">👵</div>
+            <div class="icon-name">БАБА</div>
+        </div>
+    </div>
+</div>
         
         <!-- Панель забронированных подарков -->
         <div class="reserved-panel">
@@ -954,3 +988,4 @@
     </script>
 </body>
 </html>
+
