--- a/index.html
+++ b/index.html
@@ -494,6 +494,137 @@
         .reset-btn:hover {
             opacity: 1;
         }
+        /* Анимированные иконки семьи */
+.family-icons-container {
+    margin: 30px 0;
+    position: relative;
+    z-index: 1;
+}
+
+.family-icons {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 25px;
+    padding: 20px;
+    background: rgba(255, 204, 0, 0.1);
+    border: 2px dashed #ffcc00;
+    border-radius: 15px;
+    animation: borderGlow 3s infinite alternate;
+}
+
+@keyframes borderGlow {
+    0% { border-color: #ffcc00; box-shadow: 0 0 10px rgba(255, 204, 0, 0.3); }
+    100% { border-color: #ff3366; box-shadow: 0 0 20px rgba(255, 51, 102, 0.5); }
+}
+
+.family-icon {
+    text-align: center;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    position: relative;
+    animation: float 6s ease-in-out infinite;
+}
+
+/* Разные анимации для каждой иконки */
+.family-icon:nth-child(1) { animation-delay: 0s; }
+.family-icon:nth-child(2) { animation-delay: 0.5s; }
+.family-icon:nth-child(3) { animation-delay: 1s; }
+.family-icon:nth-child(4) { animation-delay: 1.5s; }
+.family-icon:nth-child(5) { animation-delay: 2s; }
+.family-icon:nth-child(6) { animation-delay: 2.5s; }
+.family-icon:nth-child(7) { animation-delay: 3s; }
+
+@keyframes float {
+    0%, 100% { 
+        transform: translateY(0px) rotate(0deg); 
+    }
+    25% { 
+        transform: translateY(-10px) rotate(2deg); 
+    }
+    75% { 
+        transform: translateY(-5px) rotate(-2deg); 
+    }
+}
+
+.family-icon:hover {
+    transform: scale(1.2) rotate(5deg) !important;
+    animation-play-state: paused;
+}
+
+.family-icon:hover .icon-emoji {
+    transform: scale(1.3);
+    filter: drop-shadow(0 0 10px rgba(255, 255, 255, 0.8));
+}
+
+.family-icon:hover .icon-name {
+    color: #ff3366;
+    text-shadow: 0 0 10px #ff3366;
+}
+
+.icon-emoji {
+    font-size: 40px;
+    margin-bottom: 8px;
+    transition: all 0.3s ease;
+    filter: drop-shadow(2px 2px 0 rgba(0, 0, 0, 0.3));
+}
+
+.icon-name {
+    font-family: 'Press Start 2P', cursive;
+    font-size: 10px;
+    color: #ffcc00;
+    text-shadow: 1px 1px 0 #ff3366;
+    transition: all 0.3s ease;
+    letter-spacing: 1px;
+}
+
+/* Эффект при клике */
+.family-icon:active {
+    transform: scale(0.9) !important;
+}
+
+/* Адаптивность */
+@media (max-width: 768px) {
+    .family-icons {
+        gap: 15px;
+        padding: 15px;
+    }
+    
+    .icon-emoji {
+        font-size: 30px;
+    }
+    
+    .icon-name {
+        font-size: 8px;
+    }
+}
+
+/* Подсказка при наведении */
+.family-icon::after {
+    content: attr(title);
+    position: absolute;
+    bottom: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    background: rgba(0, 0, 0, 0.8);
+    color: white;
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-family: 'VT323', monospace;
+    font-size: 16px;
+    white-space: nowrap;
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.3s ease;
+    pointer-events: none;
+    z-index: 100;
+}
+
+.family-icon:hover::after {
+    opacity: 1;
+    visibility: visible;
+    transform: translateX(-50%) translateY(-5px);
+}
     </style>
 </head>
 <body>
@@ -988,4 +1119,5 @@
     </script>
 </body>
 </html>
+
 
