--- a/index.html
+++ b/index.html
@@ -533,7 +533,6 @@
 .family-icon:nth-child(4) { animation-delay: 1.5s; }
 .family-icon:nth-child(5) { animation-delay: 2s; }
 .family-icon:nth-child(6) { animation-delay: 2.5s; }
-.family-icon:nth-child(7) { animation-delay: 3s; }
 
 @keyframes float {
     0%, 100% { 
@@ -634,33 +633,29 @@
         <!-- Анимированные иконки семьи -->
 <div class="family-icons-container">
     <div class="family-icons">
-        <div class="family-icon" title="Папа">
-            <div class="icon-emoji">👨</div>
-            <div class="icon-name">ПАПА</div>
-        </div>
-        <div class="family-icon" title="Мама">
+        <div class="family-icon" title="Мамч">
             <div class="icon-emoji">👩</div>
             <div class="icon-name">МАМА</div>
         </div>
-        <div class="family-icon" title="Брат">
-            <div class="icon-emoji">👦</div>
+        <div class="family-icon" title="Ленч">
+            <div class="icon-emoji">👨</div>
             <div class="icon-name">БРАТ</div>
         </div>
-        <div class="family-icon" title="Сестра">
+        <div class="family-icon" title="Наташч">
+            <div class="icon-emoji">💃</div>
+            <div class="icon-name">НАТАША</div>
+        </div>
+        <div class="family-icon" title="Санч мл.">
+            <div class="icon-emoji">👦</div>
+            <div class="icon-name">САНЯ</div>
+        </div>
+        <div class="family-icon" title="Настенч">
             <div class="icon-emoji">👧</div>
-            <div class="icon-name">СЕСТРА</div>
+            <div class="icon-name">НАСТЯ</div>
         </div>
-        <div class="family-icon" title="Жена брата">
-            <div class="icon-emoji">👩‍❤️‍👨</div>
-            <div class="icon-name">НЕВЕСТКА</div>
-        </div>
-        <div class="family-icon" title="Дедушка">
-            <div class="icon-emoji">👴</div>
-            <div class="icon-name">ДЕД</div>
-        </div>
-        <div class="family-icon" title="Бабушка">
-            <div class="icon-emoji">👵</div>
-            <div class="icon-name">БАБА</div>
+        <div class="family-icon" title="Ириска">
+            <div class="icon-emoji">🐱</div>
+            <div class="icon-name">Кошакен</div>
         </div>
     </div>
 </div>
@@ -1119,5 +1114,6 @@
     </script>
 </body>
 </html>
+
 
 
